# uniformes-system-v2

./: .env.example  .gitignore  CLAUDE.md  LICENSE  ONBOARDING_PROMPT.md  README.md  main.tex  version.json
.claude/: CLAUDE.md  s.md  settings.local.json
.github/workflows/: build-desktop.yml
ListasPrecios/: precios_uniformes_caracas.md  precios_uniformes_pinal.md  precios_uniformes_pumarejo.md
ListasPrecios/LogosSchools/: chompa.HEIC
admin-portal/: middleware.ts  next.config.ts  package-lock.json  package.json  tsconfig.json  vitest.config.ts
admin-portal/app/: globals.css  layout.tsx
admin-portal/components/: AuthGuard.tsx  Header.tsx  (+1 more)
backend/: .env.example  Dockerfile.dev  create_public_viewer.py  pytest.ini  requirements.txt  seed_caracas.py  seed_data.py  seed_production_data.sql  test_schemas.py
docker/: docker-compose.dev.yml  init-db.sql
docs/: API_COMPATIBILITY_REPORT.md  CLOUD_DEPLOYMENT.md  DATABASE.md  DEPLOYMENT_ARCHITECTURE.md  GIT_WORKFLOW.md  PHASE1_RESULTS.md  PHASE1_TESTING.md  README.md  SALE_CHANGES_UI.md  SETUP.md  TESTING.md  WEB_PORTAL_PLAN.md  siguiente seccion
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts  vitest.config.ts
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: main.rs
scripts/: build-release.sh  clean-dev-builds.sh  clean-prod-dmgs.sh  dev.sh  migrate.sh  test.sh  uninstall-app.sh
web-portal/: README.md  next.config.ts  package-lock.json  package.json
(+448 files in other folders)
