[package]
name = "uniformes-system"
version = "2.0.0"
description = "Sistema de Gestión de Uniformes"
authors = ["Angel Samuel Suesca Rios"]
license = "MIT"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.1", features = [] }

[dependencies]
tauri = { version = "2.1", features = [] }
tauri-plugin-http = "2.1"
tauri-plugin-fs = "2.1"
tauri-plugin-dialog = "2.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
